tests/paczka1/small_fuzzy/90196060.err
Error in line 5: wftRH S538 32,6
Error in line 9: wftRH A300 34,2
